--- a/css/style.css
+++ b/css/style.css
@@ -26,16 +26,17 @@ body {
   transition: 0.2s;
 }
 
-.container {
-  width: 100%;
-}
-
 .header {
   padding: 2rem 10rem;
 }
 
 .navbar {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -110,6 +111,109 @@ body {
   filter: invert(82%) sepia(80%) saturate(254%) hue-rotate(323deg) brightness(410%) contrast(98%);
 }
 
+.modal-menu {
+  display: none;
+}
+
+.hamburger {
+  display: none;
+}
+
+.hamburger img {
+  width: 1rem;
+}
+
+.hidden {
+  display: none;
+}
+
+@media (max-width: 1440px) {
+  .header {
+    padding: 2rem 3.5rem;
+  }
+  .navbar img {
+    width: 12.5rem;
+  }
+  .footer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 6rem;
+  }
+  .footer-options {
+    flex-direction: column;
+    gap: 1.5rem;
+    text-align: center;
+    margin: 5rem 0;
+  }
+  .footer-options a {
+    font-size: 1.25rem;
+    font-weight: 400;
+  }
+  .footer-icons {
+    gap: 9rem;
+    margin-bottom: 2rem;
+  }
+  .footer-icons img {
+    width: 3rem;
+  }
+}
+@media (max-width: 710px) {
+  .hamburger {
+    display: block;
+  }
+  .header {
+    padding: 2rem 3.5rem;
+  }
+  .navbar {
+    display: flex;
+    flex-direction: column;
+  }
+  .hamburger {
+    display: flex;
+  }
+  .modal-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem 0 -22rem;
+    padding-bottom: 15rem;
+    opacity: 1;
+    transition: opacity 300ms ease-in;
+    font-family: "Fraunces", sans-serif;
+    font-weight: 700;
+    background: #fefcf7;
+    background: -moz-linear-gradient(180deg, #fefcf7 45%, rgba(254, 247, 247, 0) 100%);
+    background: -webkit-linear-gradient(180deg, #fefcf7 45%, rgba(254, 247, 247, 0) 100%);
+    background: linear-gradient(180deg, #fefcf7 45%, rgba(254, 247, 247, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fefcf7",endColorstr="#fef7f7",GradientType=1);
+    text-align: center;
+  }
+  .modal-menu ul {
+    opacity: 1;
+    transform: translate(0px, 0px);
+    transition: opacity 200ms ease-out 200ms, transform 500ms ease-out;
+  }
+  .modal-menu li {
+    color: #848990;
+    font-size: 1.4rem;
+    list-style: none;
+    margin-bottom: 1rem;
+    user-select: none;
+  }
+  .modal-menu li a {
+    text-decoration: none;
+    color: #343e4c;
+  }
+  .modal-menu li a:hover {
+    cursor: pointer;
+    color: #0e8684;
+  }
+  .navbar-options {
+    display: none;
+    width: 0;
+  }
+}
 .main-content-home {
   padding: 0rem 9rem;
 }
@@ -129,7 +233,7 @@ body {
   padding: 7rem 7rem;
 }
 .great-coffee-text h2 {
-  width: clamp(6ch, 60%, 8em);
+  width: clamp(6ch, 70%, 8em);
   font-size: clamp(1rem, 4vw, 4rem);
   font-family: "Fraunces", serif;
 }
@@ -207,15 +311,15 @@ body {
 }
 
 .choose-us {
+  position: relative;
   margin-top: 7.5rem;
   justify-content: center;
   align-items: center;
+  background-color: #293039;
+  border-radius: 1rem;
 }
 
 .choose-us-text {
-  position: relative;
-  background-color: #293039;
-  border-radius: 1rem;
   color: white;
   text-align: center;
   padding: 4rem 23rem 19rem 23rem;
@@ -383,6 +487,159 @@ body {
   transform: scale(120%);
 }
 
+@media (max-width: 1440px) {
+  .main-content-home {
+    padding: 0rem 3.5rem;
+  }
+  .great-coffee {
+    background-image: url(../../assets/home/tablet/image-hero-coffeepress.jpg);
+  }
+  .great-coffee-text {
+    padding: 5rem;
+  }
+  .great-coffee-text h2 {
+    width: clamp(8ch, 55%, 8em);
+    font-size: clamp(4rem, 6vw, 6rem);
+    line-height: 1.1;
+    width: 30rem;
+  }
+  .great-coffee-text p {
+    margin-top: 2.5rem;
+    width: 28rem;
+    line-height: 1.8rem;
+    font-size: 1.3rem;
+  }
+  .great-coffee-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .collection h1 {
+    font-size: clamp(11vw, 13.5vw, 11rem);
+    letter-spacing: 2px;
+    margin-bottom: -6rem;
+  }
+  .products {
+    flex-direction: column;
+    width: 70%;
+  }
+  .products .coffee {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6rem;
+  }
+  .product-description {
+    text-align: left;
+    gap: 1rem;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  .product-description h3 {
+    width: 15rem;
+    font-size: 1.8rem;
+  }
+  .product-description p {
+    width: 19rem;
+    font-size: 1.2rem;
+    line-height: 1.7rem;
+  }
+  .product-image img {
+    width: 15rem;
+  }
+  .title-gradient {
+    max-width: 90vw;
+    margin-top: -4rem;
+    background: linear-gradient(0deg, rgba(254, 252, 247, 0.8044818269) 90%, rgba(254, 247, 247, 0) 100%);
+  }
+  .choose-us {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    padding-bottom: 5rem;
+  }
+  .choose-us-text {
+    color: white;
+    text-align: center;
+    padding: 4rem 0 7rem 0;
+    width: 30rem;
+  }
+  .choose-us-benefits {
+    position: relative;
+    transform: translate(0, 0);
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 3rem;
+    margin: 0 1rem;
+  }
+  .benefit {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 92%;
+    height: 13.5rem;
+    gap: 4rem;
+    margin: 0;
+  }
+  .benefit img {
+    width: 6rem;
+    margin-top: 0;
+  }
+  .benefit-text {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    margin: 0;
+    width: 60%;
+  }
+  .benefit-text h3 {
+    width: 20rem;
+    font-size: 1.9rem;
+    margin-top: 0;
+  }
+  .benefit-text p {
+    font-size: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0;
+    line-height: 1.6;
+  }
+  .how-it-works {
+    margin-top: 14rem;
+    justify-content: space-between;
+  }
+  .steps {
+    margin-left: 0;
+  }
+  .step-title {
+    width: 12rem;
+    font-size: 2rem;
+    margin-top: 1rem;
+  }
+  .step-description {
+    margin-top: 1rem;
+    font-size: 1rem;
+    line-height: 1.6rem;
+  }
+  .step-description p {
+    width: 18rem;
+  }
+  .create-plan-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (max-width: 710px) {
+  .great-coffee {
+    margin-top: 0;
+    background-image: url(../assets/home/mobile/image-hero-coffeepress.jpg);
+  }
+}
 a {
   text-decoration: none;
 }
