--- a/sass/variables/common-elements.scss
+++ b/sass/variables/common-elements.scss
@@ -25,16 +25,17 @@ body {
     transition: 0.2s;
 }
 
-.container {
-    width: 100%;
-}
-
 .header {
     padding: 2rem 10rem;
 }
 
 .navbar {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -112,5 +113,136 @@ body {
                 hue-rotate(323deg) brightness(410%)
                 contrast(98%);
         }
+    }
+}
+
+.modal-menu {
+    display: none;
+}
+
+.hamburger {
+    display: none;
+}
+
+.hamburger img {
+    width: 1rem;
+}
+
+.hidden {
+    display: none;
+}
+
+@media (max-width: 1440px) {
+    .header {
+        padding: 2rem 3.5rem;
+    }
+
+    .navbar img {
+        width: 12.5rem;
+    }
+
+    .footer {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 6rem;
+    }
+
+    .footer-options {
+        flex-direction: column;
+        gap: 1.5rem;
+        text-align: center;
+        margin: 5rem 0;
+
+        a {
+            font-size: 1.25rem;
+            font-weight: 400;
+        }
+    }
+
+    .footer-icons {
+        gap: 9rem;
+        margin-bottom: 2rem;
+
+        img {
+            width: 3rem;
+        }
+    }
+}
+
+@media (max-width: 710px) {
+    .hamburger {
+        display: block;
+    }
+
+    .header {
+        padding: 2rem 3.5rem;
+    }
+    .navbar {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+
+    .modal-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 3rem 0 -22rem;
+        padding-bottom: 15rem;
+        opacity: 1;
+        transition: opacity 300ms ease-in;
+        font-family: "Fraunces", sans-serif;
+
+        font-weight: 700;
+        background: #fefcf7;
+        background: -moz-linear-gradient(
+            180deg,
+            #fefcf7 45%,
+            rgba(254, 247, 247, 0) 100%
+        );
+        background: -webkit-linear-gradient(
+            180deg,
+            #fefcf7 45%,
+            rgba(254, 247, 247, 0) 100%
+        );
+        background: linear-gradient(
+            180deg,
+            #fefcf7 45%,
+            rgba(254, 247, 247, 0) 100%
+        );
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fefcf7",endColorstr="#fef7f7",GradientType=1);
+        text-align: center;
+    }
+
+    .modal-menu ul {
+        opacity: 1;
+        transform: translate(0px, 0px);
+        transition: opacity 200ms ease-out 200ms,
+            transform 500ms ease-out;
+    }
+    .modal-menu li {
+        color: #848990;
+        font-size: 1.4rem;
+        list-style: none;
+        margin-bottom: 1rem;
+        user-select: none;
+    }
+
+    .modal-menu li a {
+        text-decoration: none;
+        color: #343e4c;
+    }
+    .modal-menu li a:hover {
+        cursor: pointer;
+        color: #0e8684;
+    }
+
+    .navbar-options {
+        display: none;
+        width: 0;
     }
 }
