--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,5 +2,5 @@
 @import "./variables/colors.scss";
 @import "./variables/common-elements.scss";
 @import "./pages/home.scss";
-@import "./pages/create-plan.scss";
-@import "./pages/about-us.scss";
+@import "./pages/create.scss";
+@import "./pages/about.scss";
