--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
   background-color: #fefcf7;
 }
 
+li {
+  list-style-type: none;
+}
+
 .btn, .create-plan-btn button, .great-coffee-text button {
   color: white;
   background-color: #0e8684;
@@ -26,89 +30,80 @@ body {
   transition: 0.2s;
 }
 
-.header {
-  padding: 2rem 10rem;
-}
-
-.navbar {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.main-navbar {
+nav {
+  padding: 2.72rem 9rem 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.navbar img {
+.nav-logo {
   width: 15.8rem;
 }
 
-.navbar-options {
-  color: #83888f;
-  font-family: "Barlow", sans-serif;
-  font-size: 0.85rem;
-  letter-spacing: 1px;
-  font-weight: 600;
-  display: inline-flex;
-  margin-right: 1rem;
-  gap: 1.9rem;
-  align-items: center;
-}
-
-.navbar-options a {
-  text-decoration: none;
-  cursor: pointer;
-  transition: 0.7s;
-  color: #83888f;
-}
-
-.navbar-options a:hover {
-  color: black;
-}
-
-.footer {
-  padding: 2.2rem 10rem;
-  background-color: #2c343e;
+#navigation ul {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  gap: 2rem;
+}
+#navigation li {
+  font-size: 0.85rem;
+  font-family: "Barlow", sans-serif;
+  font-weight: 700;
+  color: #83888f;
+  cursor: default;
+}
+#navigation a {
+  color: #83888f;
+}
+#navigation a:hover {
+  color: #333d4b;
 }
 
-.footer-logo img {
+main {
+  padding: 0 9rem;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #2c343e;
+  padding: 2.2rem 10rem;
+}
+footer ul {
+  display: flex;
+  gap: 2.05rem;
+}
+footer li {
+  font-size: 0.9rem;
+  font-family: "Barlow", sans-serif;
+  font-weight: 700;
+  color: #83888f;
+  cursor: default;
+}
+footer a {
+  color: #83888f;
+}
+footer a:hover {
+  color: #fefcf7;
+}
+footer .footer-logo {
   width: 16.5rem;
 }
-
-.footer-options {
-  margin-left: 10%;
-  margin-right: 15%;
+footer .socials {
   display: flex;
-  gap: 3.5rem;
+  gap: 1.5rem;
 }
-.footer-options a {
-  font-family: "Barlow", sans-serif;
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: #83888f;
-  text-decoration: none;
-  transition: 0.7s;
-}
-.footer-options a:hover {
-  color: #ffffff;
-}
-
-.footer-icons {
-  display: flex;
-  gap: 2.5rem;
+footer .socials img {
   cursor: pointer;
-}
-.footer-icons img {
   width: 1.8rem;
 }
-.footer-icons img:hover {
+footer .socials img:hover {
   filter: invert(82%) sepia(80%) saturate(254%) hue-rotate(323deg) brightness(410%) contrast(98%);
+}
+
+.hidden {
+  display: none;
 }
 
 .modal-menu {
@@ -119,7 +114,7 @@ body {
   display: none;
 }
 
-.hamburger img {
+#hamburger img {
   width: 1rem;
 }
 
@@ -128,49 +123,49 @@ body {
 }
 
 @media (max-width: 1440px) {
-  .header {
+  nav {
     padding: 2rem 3.5rem;
   }
-  .navbar img {
+  .nav-logo {
     width: 12.5rem;
   }
-  .footer {
+  footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 6rem;
+    padding: 6rem 0 0 0;
   }
-  .footer-options {
-    flex-direction: column;
-    gap: 1.5rem;
+  footer ul {
+    margin: 3rem 0;
     text-align: center;
-    margin: 5rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
-  .footer-options a {
-    font-size: 1.25rem;
+  footer ul li {
+    font-size: 1.1rem;
     font-weight: 400;
   }
-  .footer-icons {
-    gap: 9rem;
-    margin-bottom: 2rem;
+  footer .socials {
+    gap: 3rem;
   }
-  .footer-icons img {
-    width: 3rem;
+  footer .socials img {
+    width: 2.4rem;
   }
 }
 @media (max-width: 710px) {
+  nav {
+    padding: 1.8rem 2.2rem;
+  }
+  .nav-icon {
+    width: 9.5rem;
+  }
+  #navigation {
+    display: none;
+    width: 0;
+  }
   .hamburger {
     display: block;
-  }
-  .header {
-    padding: 2rem 3.5rem;
-  }
-  .navbar {
-    display: flex;
-    flex-direction: column;
-  }
-  .hamburger {
-    display: flex;
   }
   .modal-menu {
     display: flex;
@@ -209,15 +204,29 @@ body {
     cursor: pointer;
     color: #0e8684;
   }
-  .navbar-options {
-    display: none;
-    width: 0;
+  footer .socials {
+    gap: 3rem;
+    margin-bottom: 2rem;
+  }
+  footer .socials img {
+    width: 2.2rem;
   }
 }
-.main-content-home {
-  padding: 0rem 9rem;
+@media (max-width: 500px) {
+  footer .footer-logo {
+    width: 15rem;
+  }
+  footer ul li {
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  footer .socials {
+    gap: 2rem;
+  }
+  footer .socials img {
+    width: 2rem;
+  }
 }
-
 .great-coffee {
   color: white;
   margin-top: 4rem;
@@ -262,7 +271,6 @@ body {
   align-items: center;
 }
 .collection h1 {
-  position: relative;
   color: #848990;
   font-family: "Fraunces", serif;
   font-size: clamp(2rem, 10.2vw, 11rem);
@@ -488,7 +496,7 @@ body {
 }
 
 @media (max-width: 1440px) {
-  .main-content-home {
+  .main-home {
     padding: 0rem 3.5rem;
   }
   .great-coffee {
@@ -515,7 +523,7 @@ body {
     align-items: center;
   }
   .collection h1 {
-    font-size: clamp(11vw, 13.5vw, 11rem);
+    font-size: clamp(11vw, 10vw, 11rem);
     letter-spacing: 2px;
     margin-bottom: -6rem;
   }
@@ -533,7 +541,6 @@ body {
     text-align: left;
     gap: 1rem;
     display: flex;
-    flex-wrap: nowrap;
   }
   .product-description h3 {
     width: 15rem;
@@ -634,17 +641,303 @@ body {
     align-items: center;
   }
 }
-@media (max-width: 710px) {
+@media (max-width: 709px) {
+  .main-home {
+    padding: 0rem 2.2rem;
+  }
   .great-coffee {
+    margin-top: -2rem;
+    background: url(../../assets/home/mobile/image-hero-coffeepress.jpg);
+    background-size: cover;
+    background-position: right top;
+    background-repeat: no-repeat;
+  }
+  .great-coffee-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .great-coffee-text h2 {
+    font-size: 3.2rem;
+    width: 25rem;
+    text-align: center;
+  }
+  .great-coffee-text p {
+    text-align: center;
+    width: 22rem;
+    font-size: 1.05rem;
+    line-height: 1.6;
+  }
+  .collection h1 {
+    font-size: 2.8rem;
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+  }
+  .title-gradient {
+    width: 20rem;
+    background: linear-gradient(0deg, rgba(254, 252, 247, 0.8044818269) 50%, rgba(254, 247, 247, 0) 100%);
+    height: 10vw;
+    margin-top: -5rem;
+  }
+  .products {
+    margin-top: 3rem;
+  }
+  .products .coffee {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+  }
+  .product-description {
+    text-align: center;
+    gap: 2rem;
+    padding: 0;
+    margin-top: 1rem;
+  }
+  .product-description h3 {
+    width: 19rem;
+    font-size: 1.6rem;
+  }
+  .product-description p {
+    width: 19rem;
+    font-size: 1.05rem;
+    line-height: 1.5rem;
+  }
+  .product-image img {
+    width: 17rem;
+  }
+  .choose-us {
+    padding-top: 3rem;
+    height: 70rem;
+    justify-content: flex-start;
+  }
+  .choose-us p {
+    font-size: 1.05rem;
+    line-height: 1.6rem;
+  }
+  .choose-us-benefits {
+    position: absolute;
+    margin-top: 22rem;
+  }
+  .choose-us-text {
+    color: white;
+    text-align: center;
+    padding: 4rem 0 7rem 0;
+    width: 23rem;
+  }
+  .benefit {
+    padding: 0;
+    flex-direction: column;
+    height: 26rem;
+    gap: 3rem;
+    width: 75%;
+  }
+  .benefit img {
+    width: 6rem;
+    margin-top: 2rem;
+  }
+  .benefit-text {
+    padding: 0 1.5rem;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+  }
+  .benefit-text h3 {
+    font-size: 1.7rem;
+  }
+  .benefit-text p {
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
+  .how-it-works {
+    margin-top: 50rem;
+    justify-content: space-between;
+  }
+  .how-it-works h2 {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+  .steps-illustration {
+    display: none;
+  }
+  .steps {
+    flex-direction: column;
+    text-align: center;
+    gap: 9rem;
+  }
+  .step1,
+  .step2,
+  .step3 {
+    justify-content: center;
+    align-items: center;
+  }
+  .step-title {
+    width: 25rem;
+    font-size: 1.8rem;
+    margin-top: 1rem;
+  }
+  .step-description {
+    margin-top: 2.5rem;
+    font-size: 1.05rem;
+    line-height: 1.7rem;
+    width: 25rem;
+  }
+  .create-plan-btn button {
+    margin: 6rem 0 10rem 0;
+  }
+}
+@media (max-width: 500px) {
+  .great-coffee-text h2 {
+    font-size: 2.4rem;
+    width: 16rem;
+  }
+  .great-coffee-text p {
+    width: 14rem;
+    font-size: 0.9rem;
+  }
+  .great-coffee-text button {
+    padding: 1rem;
+    font-size: 1.1rem;
+    width: 12rem;
+  }
+  .title-gradient {
+    width: 20rem;
+    height: 12vw;
+    margin-top: -4rem;
+  }
+  .products {
+    width: 100%;
+  }
+  .product-description {
+    gap: 1rem;
+    width: 14rem;
+  }
+  .product-description h3 {
+    width: 14rem;
+    font-size: 1.3rem;
+  }
+  .product-description p {
+    width: 14rem;
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+  }
+  .product-image img {
+    width: 12rem;
+  }
+  .choose-us {
+    padding-top: 0;
+    height: 55rem;
+  }
+  .choose-us h2 {
+    font-size: 1.5rem;
+  }
+  .choose-us p {
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+  }
+  .choose-us-benefits {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 20 0 0 0;
+  }
+  .choose-us-text {
+    width: 18rem;
+    padding-bottom: 0;
+  }
+  .benefit {
+    height: 23rem;
+    max-width: 16rem;
+  }
+  .benefit img {
+    width: 5rem;
+    margin-top: 1rem;
+  }
+  .benefit-text h3 {
+    font-size: 1.3rem;
+  }
+  .benefit-text p {
+    font-size: 0.9rem;
+    line-height: 1.5;
+  }
+  .steps {
+    gap: 4rem;
+  }
+  .step-number {
+    font-size: 4rem;
+  }
+  .step-title {
+    width: 15rem;
+    font-size: 1.4rem;
+  }
+  .step-description {
+    margin-top: 1rem;
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+    width: 15rem;
+  }
+  .create-plan-btn button {
+    padding: 1rem 1.3rem;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 395px) {
+  .great-coffee-text h2 {
+    font-size: 1.8rem;
+    width: 12rem;
+  }
+  .great-coffee-text p {
+    width: 12rem;
+    font-size: 0.9rem;
+  }
+  .great-coffee-text button {
+    padding: 1rem;
+    font-size: 1.1rem;
+    width: 12rem;
+  }
+  .choose-us-text {
+    font-size: 0.85rem;
+    width: 12rem;
+  }
+  .title-gradient {
+    width: 16rem;
+    height: 12vw;
+    margin-top: -4rem;
+  }
+  .collection h1 {
+    font-size: 2.1rem;
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+  }
+  .benefit {
+    height: 20rem;
+  }
+  .benefit img {
+    width: 4rem;
     margin-top: 0;
-    background-image: url(../assets/home/mobile/image-hero-coffeepress.jpg);
+  }
+  .benefit-text {
+    max-width: 14rem;
+  }
+  .benefit-text h3 {
+    flex-wrap: wrap;
+    font-size: 1.2rem;
+  }
+  .benefit-text p {
+    font-size: 0.85rem;
+    line-height: 1.5;
   }
 }
 a {
   text-decoration: none;
 }
 
-.main-content-create {
+.main-create {
   padding: 0rem 9rem;
 }
 
@@ -1151,7 +1444,7 @@ a {
   text-decoration: none;
 }
 
-.main-content-about-us {
+.main-about {
   padding: 0rem 9rem;
 }
 
