--- a/sass/variables/common-elements.scss
+++ b/sass/variables/common-elements.scss
@@ -13,6 +13,10 @@ body {
     background-color: #fefcf7;
 }
 
+li {
+    list-style-type: none;
+}
+
 .btn {
     color: white;
     background-color: #0e8684;
@@ -25,95 +29,94 @@ body {
     transition: 0.2s;
 }
 
-.header {
-    padding: 2rem 10rem;
-}
-
-.navbar {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.main-navbar {
+nav {
+    padding: 2.72rem 9rem 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.navbar img {
+.nav-logo {
     width: 15.8rem;
 }
 
-.navbar-options {
-    color: #83888f;
-    font-family: "Barlow", sans-serif;
-    font-size: 0.85rem;
-    letter-spacing: 1px;
-    font-weight: 600;
-    display: inline-flex;
-    margin-right: 1rem;
+#navigation {
+    ul {
+        display: flex;
+        gap: 2rem;
+    }
 
-    gap: 1.9rem;
-    align-items: center;
-}
-
-.navbar-options a {
-    text-decoration: none;
-    cursor: pointer;
-    transition: 0.7s;
-    color: #83888f;
-}
-
-.navbar-options a:hover {
-    color: black;
-}
-
-.footer {
-    padding: 2.2rem 10rem;
-    background-color: #2c343e;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.footer-logo img {
-    width: 16.5rem;
-}
-
-.footer-options {
-    margin-left: 10%;
-    margin-right: 15%;
-    display: flex;
-    gap: 3.5rem;
+    li {
+        font-size: 0.85rem;
+        font-family: "Barlow", sans-serif;
+        font-weight: 700;
+        color: #83888f;
+        cursor: default;
+    }
 
     a {
-        font-family: "Barlow", sans-serif;
-        font-size: 1.2rem;
-        font-weight: 500;
         color: #83888f;
-        text-decoration: none;
-        transition: 0.7s;
 
         &:hover {
-            color: #ffffff;
+            color: #333d4b;
         }
     }
 }
 
-.footer-icons {
-    display: flex;
-    gap: 2.5rem;
-    cursor: pointer;
+main {
+    padding: 0 9rem;
+}
 
-    img {
-        width: 1.8rem;
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #2c343e;
+    padding: 2.2rem 10rem;
+
+    ul {
+        display: flex;
+        gap: 2.05rem;
+    }
+
+    li {
+        font-size: 0.9rem;
+        font-family: "Barlow", sans-serif;
+        font-weight: 700;
+        color: #83888f;
+        cursor: default;
+    }
+
+    a {
+        color: #83888f;
+
         &:hover {
-            filter: invert(82%) sepia(80%) saturate(254%)
-                hue-rotate(323deg) brightness(410%)
-                contrast(98%);
+            color: #fefcf7;
         }
     }
+
+    .footer-logo {
+        width: 16.5rem;
+    }
+
+    .socials {
+        display: flex;
+        gap: 1.5rem;
+
+        img {
+            cursor: pointer;
+            width: 1.8rem;
+            &:hover {
+                filter: invert(82%) sepia(80%)
+                    saturate(254%) hue-rotate(323deg)
+                    brightness(410%) contrast(98%);
+            }
+        }
+    }
+}
+
+.hidden {
+    display: none;
 }
 
 .modal-menu {
@@ -124,7 +127,7 @@ body {
     display: none;
 }
 
-.hamburger img {
+#hamburger img {
     width: 1rem;
 }
 
@@ -133,58 +136,59 @@ body {
 }
 
 @media (max-width: 1440px) {
-    .header {
+    nav {
         padding: 2rem 3.5rem;
     }
 
-    .navbar img {
+    .nav-logo {
         width: 12.5rem;
     }
 
-    .footer {
+    footer {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-top: 6rem;
-    }
+        padding: 6rem 0 0 0;
 
-    .footer-options {
-        flex-direction: column;
-        gap: 1.5rem;
-        text-align: center;
-        margin: 5rem 0;
+        ul {
+            margin: 3rem 0;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
 
-        a {
-            font-size: 1.25rem;
-            font-weight: 400;
+            li {
+                font-size: 1.1rem;
+                font-weight: 400;
+            }
         }
-    }
 
-    .footer-icons {
-        gap: 9rem;
-        margin-bottom: 2rem;
+        .socials {
+            gap: 3rem;
 
-        img {
-            width: 3rem;
+            img {
+                width: 2.4rem;
+            }
         }
     }
 }
 
 @media (max-width: 710px) {
+    nav {
+        padding: 1.8rem 2.2rem;
+    }
+
+    .nav-icon {
+        width: 9.5rem;
+    }
+
+    #navigation {
+        display: none;
+        width: 0;
+    }
+
     .hamburger {
         display: block;
-    }
-
-    .header {
-        padding: 2rem 3.5rem;
-    }
-    .navbar {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .hamburger {
-        display: flex;
     }
 
     .modal-menu {
@@ -196,7 +200,6 @@ body {
         opacity: 1;
         transition: opacity 300ms ease-in;
         font-family: "Fraunces", sans-serif;
-
         font-weight: 700;
         background: #fefcf7;
         background: -moz-linear-gradient(
@@ -236,13 +239,43 @@ body {
         text-decoration: none;
         color: #343e4c;
     }
+
     .modal-menu li a:hover {
         cursor: pointer;
         color: #0e8684;
     }
 
-    .navbar-options {
-        display: none;
-        width: 0;
+    footer {
+        .socials {
+            gap: 3rem;
+            margin-bottom: 2rem;
+
+            img {
+                width: 2.2rem;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    footer {
+        .footer-logo {
+            width: 15rem;
+        }
+
+        ul {
+            li {
+                font-size: 1rem;
+                font-weight: 400;
+            }
+        }
+
+        .socials {
+            gap: 2rem;
+
+            img {
+                width: 2rem;
+            }
+        }
     }
 }
