--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&family=Fraunces:opsz,wght@9..144,400;9..144,700;9..144,800;9..144,900&display=swap");
-@import "./variables/colors.scss";
-@import "./variables/common-elements.scss";
+@import "./pages/common/common.scss";
 @import "./pages/home.scss";
 @import "./pages/create.scss";
 @import "./pages/about.scss";
