Adjusting background-color

--- a/sass/pages/common/common.scss
+++ b/sass/pages/common/common.scss
@@ -8,6 +8,10 @@ html {
     font-size: 16px;
 }
 
+body {
+  background-color: #f2f2f2;
+}
+
 .card {
     margin: auto;
     border-radius: 0.8rem;
