--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -91,7 +91,6 @@
         width: 100%;
         position: relative;
         margin: 3rem 0;
-        background: hsl(43, 78%, 98%);
         h2 {
             font-size: 1.6rem;
             font-weight: 900;
@@ -139,7 +138,6 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: rgb(254, 252, 247);
             background: -moz-linear-gradient(
                 0deg,
                 rgba(254, 252, 247, 0.8044818269104517) 25%,
@@ -147,15 +145,15 @@
             );
             background: -webkit-linear-gradient(
                 0deg,
-                rgba(254, 252, 247, 0.8044818269104517) 25%,
+                rgba(242, 242, 242, 0.8044818269104517) 25%,
                 rgba(254, 247, 247, 0) 100%
             );
             background: linear-gradient(
                 0deg,
-                rgba(254, 252, 247, 0.8044818269104517) 25%,
+                rgba(242, 242, 242, 0.8044818269104517) 25%,
                 rgba(254, 247, 247, 0) 100%
             );
-            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fefcf7",endColorstr="#fef7f7",GradientType=1);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f2f2f2",endColorstr="#f2f2f2",GradientType=1);
         }
     }
 }
