--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ html {
   font-size: 16px;
 }
 
+body {
+  background-color: #f2f2f2;
+}
+
 .card {
   margin: auto;
   border-radius: 0.8rem;
@@ -304,7 +308,6 @@ footer a:hover {
   width: 100%;
   position: relative;
   margin: 3rem 0;
-  background: hsl(43, 78%, 98%);
 }
 .card--how--content h2 {
   font-size: 1.6rem;
@@ -351,11 +354,10 @@ footer a:hover {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgb(254, 252, 247);
   background: -moz-linear-gradient(0deg, rgba(254, 252, 247, 0.8044818269) 25%, rgba(254, 247, 247, 0) 100%);
-  background: -webkit-linear-gradient(0deg, rgba(254, 252, 247, 0.8044818269) 25%, rgba(254, 247, 247, 0) 100%);
-  background: linear-gradient(0deg, rgba(254, 252, 247, 0.8044818269) 25%, rgba(254, 247, 247, 0) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fefcf7",endColorstr="#fef7f7",GradientType=1);
+  background: -webkit-linear-gradient(0deg, rgba(242, 242, 242, 0.8044818269) 25%, rgba(254, 247, 247, 0) 100%);
+  background: linear-gradient(0deg, rgba(242, 242, 242, 0.8044818269) 25%, rgba(254, 247, 247, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f2f2f2",endColorstr="#f2f2f2",GradientType=1);
 }
 
 .steps-illustration {
