--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -29,6 +29,7 @@
         background-image: url("../assets/home/mobile/image-hero-coffeepress.jpg");
         background-size: cover;
         h1 {
+            color: #fefcf7;
             font-size: clamp(2.2rem, 10vw, 3.6rem);
             line-height: 1.2;
             margin: 2rem auto;
@@ -47,6 +48,12 @@
         p {
             margin: 0 auto 4rem auto;
             max-width: 16rem;
+        }
+        h2 {
+          color: #fefcf7;
+          font-size: 1.5rem;
+          font-family: "Fraunces", sans-serif;
+          text-align: center;
         }
     }
 
@@ -74,12 +81,15 @@
         margin-top: 45rem;
         position: relative;
 
-        h3 {
+
+        h1 {
             color: #83888f;
             text-align: center;
             font-size: 1.5rem;
-            font-weight: 700;
+            font-weight: 900;
             font-family: "Fraunces", sans-serif;
+            margin-bottom: 2rem;
+            margin-top: 0;
         }
 
         h2 {
@@ -92,14 +102,6 @@
         position: relative;
         margin: 3rem 0;
         h2 {
-            font-size: 1.6rem;
-            font-weight: 900;
-            line-height: 2rem;
-            color: #293039;
-            font-family: "Fraunces", sans-serif;
-            text-align: center;
-        }
-        h1 {
             font-size: 4rem;
             line-height: 6rem;
             margin: 2rem auto 0 auto;
@@ -107,6 +109,14 @@
             font-family: "Fraunces", sans-serif;
             text-align: center;
         }
+        h3 {
+          font-size: 1.6rem;
+          font-weight: 900;
+          line-height: 2rem;
+          color: #293039;
+          font-family: "Fraunces", sans-serif;
+          text-align: center;
+      }
         p {
             max-width: 18rem;
             margin: 2rem auto;
@@ -303,7 +313,7 @@
             max-width: 35rem;
             background-color: hsl(179, 81%, 29%);
 
-            h1 {
+            h2 {
                 font-size: 1.5rem;
                 text-align: left;
             }
@@ -321,7 +331,7 @@
         &--how {
             margin: 10rem 6vw;
 
-            h3 {
+            h1 {
                 font-size: 1.5rem;
                 text-align: left;
                 margin-bottom: 2.2rem;
@@ -384,12 +394,12 @@
 
     .card--how--content {
         padding: 0.8em;
-        h1 {
+        h2 {
             margin: 0;
             text-align: left;
         }
 
-        h2 {
+        h3 {
             text-align: left;
             max-width: 10rem;
             margin: 0;
@@ -449,8 +459,10 @@
             padding: 10rem 0 0 3rem;
             width: 80%;
 
-            h3 {
+            h1 {
                 margin: 0 0 4rem 0;
+                text-align: left;
+                align-self: center;
             }
             button {
                 margin: 2em 0 0 0;
@@ -513,7 +525,7 @@
     }
 
     .option__description {
-        h1 {
+        h2 {
             font-size: 1.2rem;
             text-align: center;
         }
