--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,9 @@ footer a:hover {
 }
 .card--choose--us h2 {
   color: #fefcf7;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
+  font-weight: 900;
+  margin: 1rem 0;
   font-family: "Fraunces", sans-serif;
   text-align: center;
 }
@@ -351,7 +353,7 @@ footer a:hover {
   position: relative;
   margin: 1rem auto;
 }
-.collection__title h1 {
+.collection__title h2 {
   font-size: 2.4rem;
   font-weight: 900;
   color: hsl(215, 5%, 54%);
@@ -524,7 +526,7 @@ footer a:hover {
     z-index: -1;
     margin: 0;
   }
-  .collection__title h1 {
+  .collection__title h2 {
     font-size: clamp(2rem, 14.5vw, 11rem);
     width: 100%;
     text-align: center;
@@ -601,6 +603,10 @@ footer a:hover {
     width: 80%;
     max-height: 30rem;
   }
+  .card--choose--us h2 {
+    font-size: 1.8rem;
+    font-weight: 900;
+  }
   .card--choose--us p {
     font-size: 0.9rem;
     padding-top: 1.6rem;
@@ -637,7 +643,7 @@ footer a:hover {
   .collection__title {
     top: 8em;
   }
-  .collection__title h1 {
+  .collection__title h2 {
     font-size: clamp(2rem, 12.5vw, 10rem);
   }
   .products {
