--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -49,9 +49,12 @@
             margin: 0 auto 4rem auto;
             max-width: 16rem;
         }
+
         h2 {
           color: #fefcf7;
-          font-size: 1.5rem;
+          font-size: 1.8rem;
+          font-weight: 900;
+          margin: 1rem 0;
           font-family: "Fraunces", sans-serif;
           text-align: center;
         }
@@ -136,12 +139,13 @@
         position: relative;
         margin: 1rem auto;
 
-        h1 {
+        h2 {
             font-size: 2.4rem;
             font-weight: 900;
             color: hsl(215, 5%, 54%);
             font-family: "Fraunces", sans-serif;
         }
+
         .title-gradient {
             top: 0;
             position: absolute;
@@ -344,7 +348,7 @@
             z-index: -1;
             margin: 0;
 
-            h1 {
+            h2 {
                 font-size: clamp(2rem, 14.5vw, 11rem);
                 width: 100%;
                 text-align: center;
@@ -438,6 +442,11 @@
             width: 80%;
             max-height: 30rem;
 
+            h2 {
+              font-size: 1.8rem;
+              font-weight: 900;
+            }
+
             p {
                 font-size: 0.9rem;
                 padding-top: 1.6rem;
@@ -480,7 +489,7 @@
         width: 80%;
         &__title {
             top: 8em;
-            h1 {
+            h2 {
                 font-size: clamp(2rem, 12.5vw, 10rem);
             }
         }
